[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/item_spawner.gd" type="Script" id=1]
[ext_resource path="res://assets/thunder.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/boost.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/multi.wav" type="AudioStream" id=4]

[node name="ItemSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Items" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="ThunderAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="BoostAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="MultiAudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
